# workout-planner-ai-mcp

./: .gitignore  .mcp.json  README.md  glama.json  package.json  pyproject.toml  server.py  smithery.yaml
.well-known/mcp/: server-card.json
workout_planner_ai_mcp/: server.py
