[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workout-planner-ai-mcp"
version = "0.1.0"
description = "Plan workouts, calculate BMI and one-rep max estimates, and suggest exercise splits."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
]

[project.scripts]
workout_planner_ai_mcp = "workout_planner_ai_mcp.server:main"
